add values for operator
Signed-off-by: Anton Yurkov <anton.yurkov@dell.com>

--- a/charts/csi-baremetal-operator/values.yaml
+++ b/charts/csi-baremetal-operator/values.yaml
@@ -8,3 +8,12 @@ image:
   name: csi-baremetal-operator
   tag: green
   pullPolicy: Always
+
+resources:
+# Memory limit is increased due to bug in OpenShift 4.6 - https://bugzilla.redhat.com/show_bug.cgi?id=1904558
+  limits:
+    cpu: 100m
+    memory: 200Mi
+  requests:
+    cpu: 100m
+    memory: 20Mi
