--- a/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
+++ b/charts/csi-baremetal-operator/crds/csi-baremetal.dell.com_deployments.yaml
@@ -66,7 +66,7 @@ spec:
                         - level
                         type: object
                       resources:
-                        description: ResourceRequirements describes the compute resource requirements.
+                        description: ResourceRequirements contain information for mem/cpu requirements
                         properties:
                           limits:
                             additionalProperties:
@@ -75,7 +75,8 @@ spec:
                               - type: string
                               pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                               x-kubernetes-int-or-string: true
-                            description: 'Limits describes the maximum amount of compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                            description: ResourceList is a set of (resource name, quantity) pairs.
+                            nullable: true
                             type: object
                           requests:
                             additionalProperties:
@@ -84,7 +85,8 @@ spec:
                               - type: string
                               pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                               x-kubernetes-int-or-string: true
-                            description: 'Requests describes the minimum amount of compute resources required. If Requests is omitted for a container, it defaults to Limits if that is explicitly specified, otherwise to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                            description: ResourceList is a set of (resource name, quantity) pairs.
+                            nullable: true
                             type: object
                         type: object
                       sidecars:
@@ -103,7 +105,7 @@ spec:
                               - tag
                               type: object
                             resources:
-                              description: ResourceRequirements describes the compute resource requirements.
+                              description: ResourceRequirements contain information for mem/cpu requirements
                               properties:
                                 limits:
                                   additionalProperties:
@@ -112,7 +114,8 @@ spec:
                                     - type: string
                                     pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                                     x-kubernetes-int-or-string: true
-                                  description: 'Limits describes the maximum amount of compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                                  description: ResourceList is a set of (resource name, quantity) pairs.
+                                  nullable: true
                                   type: object
                                 requests:
                                   additionalProperties:
@@ -121,7 +124,8 @@ spec:
                                     - type: string
                                     pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                                     x-kubernetes-int-or-string: true
-                                  description: 'Requests describes the minimum amount of compute resources required. If Requests is omitted for a container, it defaults to Limits if that is explicitly specified, otherwise to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                                  description: ResourceList is a set of (resource name, quantity) pairs.
+                                  nullable: true
                                   type: object
                               type: object
                           required:
@@ -185,7 +189,7 @@ spec:
                             - tag
                             type: object
                           resources:
-                            description: ResourceRequirements describes the compute resource requirements.
+                            description: ResourceRequirements contain information for mem/cpu requirements
                             properties:
                               limits:
                                 additionalProperties:
@@ -194,7 +198,8 @@ spec:
                                   - type: string
                                   pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                                   x-kubernetes-int-or-string: true
-                                description: 'Limits describes the maximum amount of compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                                description: ResourceList is a set of (resource name, quantity) pairs.
+                                nullable: true
                                 type: object
                               requests:
                                 additionalProperties:
@@ -203,7 +208,8 @@ spec:
                                   - type: string
                                   pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                                   x-kubernetes-int-or-string: true
-                                description: 'Requests describes the minimum amount of compute resources required. If Requests is omitted for a container, it defaults to Limits if that is explicitly specified, otherwise to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                                description: ResourceList is a set of (resource name, quantity) pairs.
+                                nullable: true
                                 type: object
                             type: object
                         required:
@@ -235,7 +241,7 @@ spec:
                         - level
                         type: object
                       resources:
-                        description: ResourceRequirements describes the compute resource requirements.
+                        description: ResourceRequirements contain information for mem/cpu requirements
                         properties:
                           limits:
                             additionalProperties:
@@ -244,7 +250,8 @@ spec:
                               - type: string
                               pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                               x-kubernetes-int-or-string: true
-                            description: 'Limits describes the maximum amount of compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                            description: ResourceList is a set of (resource name, quantity) pairs.
+                            nullable: true
                             type: object
                           requests:
                             additionalProperties:
@@ -253,7 +260,8 @@ spec:
                               - type: string
                               pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                               x-kubernetes-int-or-string: true
-                            description: 'Requests describes the minimum amount of compute resources required. If Requests is omitted for a container, it defaults to Limits if that is explicitly specified, otherwise to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                            description: ResourceList is a set of (resource name, quantity) pairs.
+                            nullable: true
                             type: object
                         type: object
                       sidecars:
@@ -272,7 +280,7 @@ spec:
                               - tag
                               type: object
                             resources:
-                              description: ResourceRequirements describes the compute resource requirements.
+                              description: ResourceRequirements contain information for mem/cpu requirements
                               properties:
                                 limits:
                                   additionalProperties:
@@ -281,7 +289,8 @@ spec:
                                     - type: string
                                     pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                                     x-kubernetes-int-or-string: true
-                                  description: 'Limits describes the maximum amount of compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                                  description: ResourceList is a set of (resource name, quantity) pairs.
+                                  nullable: true
                                   type: object
                                 requests:
                                   additionalProperties:
@@ -290,7 +299,8 @@ spec:
                                     - type: string
                                     pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                                     x-kubernetes-int-or-string: true
-                                  description: 'Requests describes the minimum amount of compute resources required. If Requests is omitted for a container, it defaults to Limits if that is explicitly specified, otherwise to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                                  description: ResourceList is a set of (resource name, quantity) pairs.
+                                  nullable: true
                                   type: object
                               type: object
                           required:
@@ -334,7 +344,7 @@ spec:
                     - level
                     type: object
                   resources:
-                    description: ResourceRequirements describes the compute resource requirements.
+                    description: ResourceRequirements contain information for mem/cpu requirements
                     properties:
                       limits:
                         additionalProperties:
@@ -343,7 +353,8 @@ spec:
                           - type: string
                           pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                           x-kubernetes-int-or-string: true
-                        description: 'Limits describes the maximum amount of compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                        description: ResourceList is a set of (resource name, quantity) pairs.
+                        nullable: true
                         type: object
                       requests:
                         additionalProperties:
@@ -352,7 +363,8 @@ spec:
                           - type: string
                           pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                           x-kubernetes-int-or-string: true
-                        description: 'Requests describes the minimum amount of compute resources required. If Requests is omitted for a container, it defaults to Limits if that is explicitly specified, otherwise to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                        description: ResourceList is a set of (resource name, quantity) pairs.
+                        nullable: true
                         type: object
                     type: object
                 required:
@@ -452,7 +464,7 @@ spec:
                       readinessTimeout:
                         type: integer
                       resources:
-                        description: ResourceRequirements describes the compute resource requirements.
+                        description: ResourceRequirements contain information for mem/cpu requirements
                         properties:
                           limits:
                             additionalProperties:
@@ -461,7 +473,8 @@ spec:
                               - type: string
                               pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                               x-kubernetes-int-or-string: true
-                            description: 'Limits describes the maximum amount of compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                            description: ResourceList is a set of (resource name, quantity) pairs.
+                            nullable: true
                             type: object
                           requests:
                             additionalProperties:
@@ -470,7 +483,8 @@ spec:
                               - type: string
                               pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                               x-kubernetes-int-or-string: true
-                            description: 'Requests describes the minimum amount of compute resources required. If Requests is omitted for a container, it defaults to Limits if that is explicitly specified, otherwise to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                            description: ResourceList is a set of (resource name, quantity) pairs.
+                            nullable: true
                             type: object
                         type: object
                       restoreOnShutdown:
@@ -480,7 +494,7 @@ spec:
                     - resources
                     type: object
                   resources:
-                    description: ResourceRequirements describes the compute resource requirements.
+                    description: ResourceRequirements contain information for mem/cpu requirements
                     properties:
                       limits:
                         additionalProperties:
@@ -489,7 +503,8 @@ spec:
                           - type: string
                           pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                           x-kubernetes-int-or-string: true
-                        description: 'Limits describes the maximum amount of compute resources allowed. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                        description: ResourceList is a set of (resource name, quantity) pairs.
+                        nullable: true
                         type: object
                       requests:
                         additionalProperties:
@@ -498,7 +513,8 @@ spec:
                           - type: string
                           pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                           x-kubernetes-int-or-string: true
-                        description: 'Requests describes the minimum amount of compute resources required. If Requests is omitted for a container, it defaults to Limits if that is explicitly specified, otherwise to an implementation-defined value. More info: https://kubernetes.io/docs/concepts/configuration/manage-compute-resources-container/'
+                        description: ResourceList is a set of (resource name, quantity) pairs.
+                        nullable: true
                         type: object
                     type: object
                   storageProvisioner:
